--- a/mapkubeapi.yaml
+++ b/mapkubeapi.yaml
@@ -18,7 +18,7 @@
   script:
     - |
       if [[ "$HELM_VERSION_FOR_MAPKUBEAPIS" == 'v2' ]]; then
-        helm mapkubeapis $CI_ENVIRONMENT_SLUG --release-storage configmaps --tiller-out-cluster --namespace $TILLER_NAMESPACE --v2
+        helm mapkubeapis $CI_ENVIRONMENT_SLUG --release-storage configmaps --kubeconfig $PWD/kubeconfig --tiller-out-cluster --namespace $TILLER_NAMESPACE --v2
       else
         helm mapkubeapis $CI_ENVIRONMENT_SLUG --namespace $TILLER_NAMESPACE
       fi
