--- a/mapkubeapi.yaml
+++ b/mapkubeapi.yaml
@@ -5,8 +5,9 @@
   environment:
     action: start
   before_script:
-    - echo $DEV_KUBECONFIG | base64 -d > kubeconfig
-    - KUBECONFIG=$PWD/kubeconfig
+    - kubectl cluster-info
+    - echo $DEV_KUBECONFIG | base64 -d > kubecfg
+    - KUBECONFIG=$PWD/kubecfg
     - export TILLER_NAMESPACE=$KUBE_NAMESPACE
     - |
       if [[ "$HELM_VERSION_FOR_MAPKUBEAPIS" == 'v2' ]]; then
@@ -18,7 +19,7 @@
   script:
     - |
       if [[ "$HELM_VERSION_FOR_MAPKUBEAPIS" == 'v2' ]]; then
-        helm mapkubeapis $CI_ENVIRONMENT_SLUG --release-storage configmaps --kubeconfig $PWD/kubeconfig --tiller-out-cluster --namespace $TILLER_NAMESPACE --v2
+        helm mapkubeapis $CI_ENVIRONMENT_SLUG --release-storage configmaps --kubeconfig $PWD/kubecfg --tiller-out-cluster --namespace $TILLER_NAMESPACE --v2
       else
         helm mapkubeapis $CI_ENVIRONMENT_SLUG --namespace $TILLER_NAMESPACE
       fi
