--- a/map-dev.yaml
+++ b/map-dev.yaml
@@ -46,6 +46,7 @@
       fi
     - helm init --client-only
     - helm plugin install https://github.com/hickeyma/helm-mapkubeapis
+    - helm ls
   script:
     - |
       if [[ "$HELM_VERSION_FOR_MAPKUBEAPIS" == 'v2' ]]; then
